--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,11 @@
 body {
-    font-family: "Franklin Gothic";
+    font-family: "Franklin Gothic" sans-serif;
     font-weight: bold;
-    margin-bottom: 30px;
+    color: black;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
 }
 button {
     font-weight: bold;
@@ -25,7 +29,7 @@ button {
 }
 .board {
     border-spacing: 7.5px;
-    margin-bottom:0px
+    margin-bottom: 0px;
 }
 .container{
     justify-content:center;
@@ -78,5 +82,4 @@ button {
 #result {
     font-size: x-small;
     height: 15px;
-    
 }
