--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,10 @@
+
+
 body {
-    font-family: "Franklin Gothic" sans-serif;
+    font-family: "Franklin Gothic", sans-serif;
     font-weight: bold;
     color: black;
-    margin-bottom:30px;
+    margin-bottom: 30px;
 }
 button {
     font-weight: bold;
@@ -14,15 +16,34 @@ button {
     width: 50px;
     height: 50px;
     text-align: center;
-    font-size: xx-large; 
+    font-size: xx-large;
+    border-color: #D3D6DA; 
+    background-color: transparent;
+    color: black;
+}
+.selected {
+    border-color: #878A8C;
 }
 .alphabet, .board {
     justify-content: center;
     align-items: center;
 }
 .letter {
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    
+
     height: 50px;
     width: 35px;
+    background-color:#D3D6DA;
+    color: black;
+    font-size: large;
+}
+.letter:hover {
+    cursor:pointer;
 }
 .board {
     border-spacing: 7.5px;
@@ -35,23 +56,25 @@ button {
     white-space: pre;
     flex-direction: column;
 }
-.letter {
-    font-size: medium;   
-}
 .green {
     background-color:#6AAA64;
+    border-color: #6AAA64;
     color: white;
 }
 .yellow {
     background-color:#C9B458;
+    border-color:#C9B458;
     color: white;
 }
 .grey {
     background-color:#777C7E;
+    border-color: #777C7E;
     color: white;
 }
 #Enter, #Backspace {
     width:fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 #rulesText {
     font-weight: normal;
@@ -75,6 +98,19 @@ button {
 }
 #reset {
     height: 40px;
+    font-weight: bold;
+    border: 0px;
+    border-radius: 5px;
+    background-color:#D3D6DA;
+    display: flex;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+#reset:hover {
+    cursor: pointer;
 }
 #result {
     font-size: x-small;
